templates/f5-cluster_router-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      serviceAccountName: bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            # See the k8s-bigip-ctlr documentation for information about
            # all config options
            # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=10.1.3.100",
            "--bigip-partition=ose",
            "--pool-member-type=cluster",
            "--openshift-sdn-name=/Common/ose-tunnel",
            "--manage-routes=true",
	    "--route-vserver-addr=10.1.2.50",
            "--route-label=Splunk1"
            ]
      imagePullSecrets:
        - name: f5-docker-images
        - name: bigip-login
