templates/f5-openshift-unsecured-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myService
  name: osesplunk.cloudmegalodon.com
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: least-connections-node
spec:
  host: osesplunk.cloudmegalodon.com
  path: "/splunk1"
  port:
    targetPort: 8000
  to:
    kind: Service
    name: splunk
