templates/f5-openshift-unsecured-route2.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myHttpdService
  name: osehttpd.cloudmegalodon.com
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: least-connections-node
spec:
  host: osehttpd.cloudmegalodon.com
  path: "/httpd"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
